--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 WRDS_USERNAME=jdoe
+
+CLERK_SECRET_KEY=clerk_secret_key
+DOMAIN=advanced-hermit-16.accounts.dev
+CLERK_DOMAIN=advanced-hermit-16.clerk.accounts.dev
+ENVIRONMENT=development # development, production
+APP_URL_VERCEL=simple-auth-alpha.vercel.app
